# dc-motor

./: .gitignore  README.md
assets/01_System_Identification/open-loop-log/: log_20260430170959.csv  log_20260430171001.csv  log_20260430171006.csv  log_20260430171027.csv  log_20260430171029.csv  log_20260430171038.csv  log_20260430171040.csv  log_20260430171042.csv  log_20260430171044.csv  log_20260430171055.csv  log_20260430171057.csv  log_20260430171059.csv  log_20260430171101.csv  log_20260601161526.csv  log_20260601161528.csv  log_20260601161541.csv  log_20260601161546.csv  log_20260601161548.csv  log_20260601161551.csv  log_20260601161553.csv  log_20260601161556.csv  log_20260601161558.csv  log_20260601161601.csv  log_20260601161603.csv  log_20260601161606.csv  log_20260601161608.csv  log_20260601161613.csv  log_20260601161618.csv  log_20260601161621.csv  log_20260601161623.csv  log_20260601161626.csv  log_20260601161628.csv  log_20260601161633.csv  log_20260601161641.csv  log_20260601161646.csv  log_20260601161648.csv  log_20260601161651.csv  log_20260601161653.csv  log_20260601161656.csv  log_20260601161658.csv  (+39 more)
assets/01_System_Identification/open-loop-responses/: log_20260601161531.csv  log_20260601161533.csv  log_20260601161536.csv  log_20260601161538.csv  log_20260601161543.csv  log_20260601161611.csv  log_20260601161616.csv  log_20260601161631.csv  log_20260601161636.csv  log_20260601161638.csv  log_20260601161643.csv  log_20260601161703.csv  log_20260601161708.csv  log_20260601161714.csv  log_20260601161716.csv  log_20260601161734.csv  log_20260601161739.csv  log_20260601161744.csv  log_20260601161751.csv  log_20260601161756.csv  log_20260601161801.csv  log_20260601161804.csv  log_20260601161809.csv  log_20260601161819.csv  log_20260601161829.csv  log_20260601161834.csv  log_20260601161836.csv  log_20260601161839.csv  log_20260601161846.csv  log_20260601161854.csv  log_20260601161904.csv  log_20260601161922.csv  log_20260601161927.csv  log_20260601161929.csv  log_20260601161932.csv  log_20260601161937.csv  log_20260601161939.csv  log_20260601161942.csv  log_20260601161947.csv  log_20260601161949.csv
assets/latex/: block-diagram.tex  discretization.tex  first-order-motor.tex  modified-block-diagram.tex  second-order-motor.tex  test.tex
dc-motor/: Cargo.toml
dc-motor/src/: main.rs
dc-motor/src/resources/: global_resources.rs  gpio_list.rs  mod.rs
dc-motor/src/tasks/: dc_motor.rs  logger.rs  usb_handler.rs
docs/: 01-Control-Implementation.md  01-System-Identification.md  02-PID-Implementation.md  02-System-Identification.md  03-Speed-Control.md  04-Position-Control.md  README.md
firmware/: Cargo.toml  README.md  memory.x  rust-toolchain.toml  taplo.toml
firmware-logger/: commands.yaml  logger.py
firmware/.cargo/: config.toml
firmware/common/: Cargo.toml
firmware/common/src/: lib.rs
firmware/dc-motor-firmware/: Cargo.toml
firmware/dc-motor-firmware/src/control/: pid_control.rs
firmware/dc-motor-firmware/src/resources/: mod.rs  usb_tx_resources.rs
firmware/dc-motor-firmware/src/tasks/: mod.rs
firmware/main/: Cargo.toml  memory.x
firmware/main/src/: main.rs
firmware/main/src/control/: filter.rs  mod.rs  motion_profile.rs  pid_control.rs
firmware/main/src/resources/: config.rs  flash_storage.rs  gpio_list.rs  logger_resources.rs  mod.rs  motor_resources.rs  usb_resources.rs  usb_rx_resources.rs  usb_tx_resources.rs
firmware/main/src/tasks/: dc_motor.rs  logger.rs  mod.rs  usb_task.rs
firmware/playground/blink/: Cargo.toml
firmware/playground/flash_storage/: Cargo.toml
firmware/playground/flash_storage/src/: main.rs
firmware/playground/multicore/: Cargo.toml
firmware/playground/pid_control/: Cargo.toml
firmware/playground/script/: run.py
firmware/playground/script/Board/: Pico.py
firmware/playground/script/YAML/: usb_communication.yaml
firmware/playground/usb_communication/: Cargo.toml  memory.x
firmware/playground/usb_communication/src/: macros.rs  main.rs  usb_rx_handler.rs  usb_task.rs  usb_tx_handler.rs
firmware/playground/usb_logger/: Cargo.toml  build.rs
firmware/src/: main.rs
firmware/src/control/: mod.rs  motion_profile.rs  moving_average.rs  pid_control.rs
firmware/src/resources/: config.rs  event_resources.rs  flash_storage.rs  global_resources.rs  gpio_list.rs  logger_resources.rs  macros.rs  mod.rs  motor_resources.rs  usb_resources.rs  usb_rx_resources.rs  usb_tx_resources.rs
firmware/src/tasks/: dc_motor.rs  encoder.rs  event_handler.rs  heartbeat.rs  logger.rs  mod.rs  motion_profile.rs  pid_control.rs  usb_handler.rs  usb_task.rs
python-script/: Script.py
python-script/Device/: Pico.py
python-script/FWLogger/: FWLogger.py
remote-control/: Cargo.toml  README.md
remote-control/src/: main.rs
rust_script/: Cargo.toml  build.rs
rust_script/DeviceOpFuncs/: DCMotor.toml
rust_script/src/: macros.rs  main.rs
rust_script/src/apps/: cli.rs  command_handler.rs  editor.rs  mod.rs
rust_script/src/basic_function/: conversion.rs  mod.rs  move_motor.rs  utility.rs
rust_script/src/board/: mod.rs  rpi.rs
rust_script/src/config/: logger_config.rs  mod.rs  motor_config.rs
rust_script/src/logger/: fwlogger.rs  mod.rs
rust_script/src/program/: macros.rs  mod.rs  script.rs
script/: Script.py  base_url.py  pyproject.toml  run.py
script/BasicFunction/: Motor.py
script/Board/: Pico.py
script/Config/: Data.py  Motor0.py  Motor1.py  system_identification.csv
script/Device/: Device.py
script/DeviceOpFuncs/: DCMotor.toml  USBCommunication.toml
script/Event/: Event.py
script/FWLogger/: FWLogger.py
script/Features/: MotorControl.py
script/System_Identification/: PID.py  PID_2.py  system_identification.py
script/Tool/: FileProcessing.py  MotorSim.py  SystemIdentification.py  plotter.py  visualize.py
script/YAML/: DCMotor.yaml  Pico_0_0_6.yaml  Pico_0_1_0.yaml  Pico_0_1_1.yaml  Pico_0_1_2.yaml  Pico_0_1_3.yaml  commands.yaml
script/assets/open-loop-responses/: log_20260430170953.csv  log_20260430170955.csv  log_20260430170957.csv  log_20260430171004.csv  (+17 more)
