[workspace]
resolver = "2"
members = [
    "dc-motor-firmware",
]

[profile.release]
opt-level = "s"      # "s" optimizes for size while keeping speed; use "z" for smallest binary
lto = "fat"          # Link Time Optimization is crucial for removing unused HAL code
codegen-units = 1    # Allow the compiler to see the whole project for better optimization
panic = "abort"      # Embedded apps shouldn't "unwind" on panic
strip = true         # Removes symbol tables to save Flash space

[profile.release.package.embassy-rp]
opt-level = 3

[profile.release.package.fixed]
opt-level = 3

[profile.release.package.embassy-executor]
opt-level = "s"

[profile.release.package.dc-motor-firmware]
opt-level = "s"

[profile.dev]
debug = 2
lto = true
opt-level = "z"