[workspace]
resolver = "2"
members = [ "main", "playground/*"]

[workspace.package]
edition     = "2024"
authors     = ["Tutla"]
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/tutla53/dc-motor"

[workspace.dependencies]
# Cortex 
cortex-m-rt = { version = "0.7.5" }

# Embassy Library
embassy-sync        = { version = "0.7.2", features = ["defmt"] }
embassy-executor    = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time        = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp          = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb         = { version = "0.5.1" }
embassy-futures     = { version = "0.1.2" }

# Utility
defmt       = { version = "1.0.1" }
defmt-rtt   = { version = "1.1.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio         = { version = "0.3.0" }
log         = { version = "0.4" }

# Assign Resources
assign-resources    = { version = "0.5.0" }
portable-atomic     = { version = "1.13.0", features = ["critical-section"] }

[profile.release]
opt-level = "s"      # "s" optimizes for size while keeping speed; use "z" for smallest binary
lto = "fat"          # Link Time Optimization is crucial for removing unused HAL code
codegen-units = 1    # Allow the compiler to see the whole project for better optimization
panic = "abort"      # Embedded apps shouldn't "unwind" on panic
strip = true         # Removes symbol tables to save Flash space

[profile.release.package.embassy-rp]
opt-level = 3

[profile.release.package.fixed]
opt-level = 3

[profile.dev]
debug = 2
lto = true
opt-level = "z"