[package]
name = "rust_script"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
serialport = "4.3"
toml = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.5"
csv = "1.3"
colored = "3.1.1"
clap = { version = "4.5", features = ["derive"] }
rustyline = { version = "18.0.1", features = ["derive"] }

[build-dependencies]
toml = { version = "1.1.2", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.2", features = ["serde"] }