[package]
build   = "build.rs"
edition = "2024"
name    = "rust_script"
version = "0.2.1"

[dependencies]
byteorder  = "1.5"
clap       = { version = "4.5", features = ["derive"] }
colored    = { version = "3.1.1" }
csv        = { version = "1.3" }
rustyline  = { version = "18.0.1", features = ["derive"] }
serde      = { version = "1.0", features = ["derive"] }
serialport = { version = "4.3" }
toml       = { version = "1.1.2" }

[build-dependencies]
indexmap = { version = "2.2", features = ["serde"] }
serde    = { version = "1.0", features = ["derive"] }
toml     = { version = "1.1.2", features = ["preserve_order"] }
