[package]
name = "common"
version = "0.1.0"
edition.workspace       = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true

[dependencies]
embassy-rp.workspace    = true
defmt.workspace         = true
defmt-rtt.workspace     = true
panic-probe.workspace   = true