[package]
authors.workspace    = true
description          = "DC Motor Control with Rotary Encoder"
edition.workspace    = true
license.workspace    = true
name                 = "main"
repository.workspace = true
version              = "1.0.0"

[dependencies]
# Cortex
cortex-m-rt.workspace = true

# Embassy Library
embassy-executor.workspace = true
embassy-futures.workspace  = true
embassy-rp.workspace       = true
embassy-sync.workspace     = true
embassy-time.workspace     = true
embassy-usb.workspace      = true

# Utility
defmt.workspace       = true
defmt-rtt.workspace   = true
panic-probe.workspace = true
pio.workspace         = true

# Assign Resources
assign-resources.workspace = true
portable-atomic            = { workspace = true }

# Project Library
fixed              = { version = "1.30.0" }
libm               = { version = "0.2.11" }
postcard           = { version = "1.0", features = ["embedded-io"] }
sequential-storage = { version = "7.1.0" }
serde              = { version = "1.0.228", default-features = false, features = ["derive"] }
static_cell        = { version = "2.1.1" }

[package.metadata.cargo-machete]
ignored = ["defmt", "defmt-rtt", "cortex-m-rt", "panic-probe"]
