[package]
# Specific
description = "Store Data on Flash Memory"
name        = "flash_storage"
version     = "1.0.0"

# General
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true


[dependencies]
# Cortex
cortex-m-rt.workspace = true

# Embassy Library
embassy-executor.workspace = true
embassy-rp.workspace       = true
embassy-time.workspace     = true

# Utility
defmt.workspace       = true
defmt-rtt.workspace   = true
panic-probe.workspace = true

[package.metadata.cargo-machete]
ignored = ["defmt", "defmt-rtt", "cortex-m-rt", "panic-probe"]
