[package]
# Specific
description = "RP2040 USB Communication"
name        = "usb_communication"
version     = "1.0.0"

# General
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
# Cortex
cortex-m-rt.workspace = true

# Embassy Library
embassy-executor.workspace = true
embassy-futures.workspace  = true
embassy-rp.workspace       = true
embassy-sync.workspace     = true
embassy-usb.workspace      = true

# Utility
defmt.workspace           = true
defmt-rtt.workspace       = true
panic-probe.workspace     = true
portable-atomic.workspace = true

# Project Library
static_cell = { version = "2.1.1" }

[package.metadata.cargo-machete]
ignored = ["defmt", "defmt-rtt", "cortex-m-rt", "panic-probe"]
